2005-12-21  Prakash Punnoor <prakash@punnoor.de>

	* arch/i386/x86_floatmul.c: added; renamed i386 floatmul
	
	* CMakeLists.txt: renamed i386 floatmul
	
	* configure.ac, src/Makefile.am: MMX support back in;
	NASM compilation rule missing, so beware that cpu caps detection is
	missing; deactivate NASM for the meanwhile
	
	* arch/i386/floatmul.c, arch/i386/mix16.nasm: removed
	
2005-12-21  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am, configure.ac, src/Makefile.am, src/arch/bsd/bsd_dsp.c,
	src/arch/darwin/darwin_native.c, src/arch/interface/platform.h,
	src/arch/irix/iris.c, src/arch/linux/lin_dsp.c,
	src/arch/morphos/morphos_dispatcher.c,
	src/arch/morphos/morphos_native.c, src/arch/solaris/solaris_native.c,
	src/arch/windows/windows_native.c: Unified all the headers for native
	backends. Backend auto-detection should be complete now (modulo some
	testing, of course).

	* src/arch/bsd/bsd_dsp.h, src/arch/darwin/darwin_native.h,
	src/arch/irix/iris.h, src/arch/linux/lin_dsp.h,
	src/arch/morphos/morphos_native.h, src/arch/solaris/solaris_native.h
	src/arch/windows/windows_native.h: Removed.

	* CMakeLists.txt, config-osx.h, configure.ac, src/Makefile.am,
	src/al_main.h, src/al_mixer.c, src/al_siteconfig.h,
	src/arch/interface/platform.h, src/audioconvert/ac_misc.c: Improved
	backend detection even more. Removed obscure BROKEN_LIBIO stuff, if
	there is really still some need for this (which I doubt), we should do
	it differently.

2005-12-20  Prakash Punnoor <prakash@punnoor.de>

	* src/al_main.c, src/al_main.h, src/alc/alc_speaker.c: move matrix stuff
	into separate object; deactivate _alRotatePointAboutAxis, as it is not
	used and wasn't specified in the header anyway
	
	* src/al_matrix.c, src/al_matrix.h: added
	
	* CMakeLists.txt, src/Makefile.am: compile al_matrix.c

2005-12-20  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Improved backend detection. Still not
	perfect and far too much cut-n-paste, but better than before.
