@@ -557,7 +557,7 @@ IF(SMPEG)
       EXEC_PROGRAM(${SMPEG_CONFIG} ARGS "--libs" OUTPUT_VARIABLE SMPEG_LIBS)
       SET(ADD_CFLAGS "${ADD_CFLAGS} ${SMPEG_CFLAGS}")
       SET(ADD_LIBS ${ADD_LIBS} ${SMPEG_LIBS})
-      ADD_DEFINE(SMPEG_SUPPORT)
+      ADD_DEFINE(ENABLE_EXTENSION_AL_EXT_MP3)
     ELSE(NOT ${SMPEG_CONFIG} MATCHES "NOTFOUND")
       MESSAGE("smpeg-config not found - smpg support disabled.")
     ENDIF(NOT ${SMPEG_CONFIG} MATCHES "NOTFOUND")
